--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,10 +1,12 @@
+/*Universal*/
 * {
     box-sizing: border-box;
+    font-size: 16px;
 }
 
 body {
     height: 100%;
-    width: 100%;
+    width: auto;
 }
 
 .main {
@@ -12,13 +14,24 @@ body {
     width: 100%;
 }
 
+
+/*Banner Section*/
+
 .banner-container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
+    box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.99);
+    width: auto;
 }
 
+h1 {
+    text-transform: uppercase;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 3rem;
+
+}
 
 
 header {
